add notes from thursday

--- a/00_admin/midterm_facts.Rmd
+++ b/00_admin/midterm_facts.Rmd
@@ -32,7 +32,7 @@ This exam covers material in the class notes through October 22 and Homeworks 1-
 To study:
 
 - Go over your homework in detail. If you do not fully understand a problem, ask your peers and come to office hours.
-- Re-read you class notes. Be sure you understand every example.
+- Re-read your class notes. Be sure you understand every example.
 - Create a good formula sheet. This will help you learn the material.
 
 Test Format:
