--- a/8_bootstrap/8_bootstrap.Rmd
+++ b/8_bootstrap/8_bootstrap.Rmd
@@ -639,6 +639,102 @@ If the block length is too long,
 
 [**Your Turn**]{.yourturn}
 
+We will look at the annual numbers of lynx trappings for 1821–1934 in Canada. Taken from Brockwell & Davis (1991).
+
+```{r}
+data(lynx)
+plot(lynx)
+```
+
+**Goal:** Estimate the sample distribution of the mean
+
+```{r}
+theta_hat <- mean(lynx)
+theta_hat
+```
+
+### Independent Bootstrap
+
+```{r}
+library(simpleboot)
+B <- 10000
+
+## Your turn: perform the independent bootstap
+## what is the bootstrap estimate se?
+
+
+```
+
+We must account for the dependence to obtain a correct estimate of the variance!
+
+```{r}
+acf(lynx)
+```
+
+The acf (autocorrelation) in the dominant terms is positive, so we are *underestimating* the standard error.
+
+### Non-overlapping Block Bootstrap
+
+```{r}
+# function to create non-overlapping blocks
+nb <- function(x, b) {
+  n <- length(x)
+  l <- n %/% b
+  
+  blocks <- matrix(NA, nrow = b, ncol = l)
+  for(i in 1:b) {
+    blocks[i, ] <- x[((i - 1)*l + 1):(i*l)]
+  }
+  blocks
+}
+
+# Your turn: perform the NBB with b = 10 and l = 11
+theta_hat_star_nbb <- rep(NA, B)
+nb_blocks <- nb(lynx, 10)
+for(i in 1:B) {
+  # sample blocks
+  # get theta_hat^*
+}
+
+# Plot your results to inspect the distribution
+# What is the estimated standard error of theta hat? The Bias?
+
+```
+
+### Moving Block Bootstrap
+
+```{r}
+# function to create overlapping blocks
+mb <- function(x, l) {
+  n <- length(x)
+  blocks <- matrix(NA, nrow = n - l + 1, ncol = l)
+  for(i in 1:(n - l + 1)) {
+    blocks[i, ] <- x[i:(i + l - 1)]
+  }
+  blocks
+}
+
+# Your turn: perform the MBB with l = 11
+mb_blocks <- mb(lynx, 11)
+theta_hat_star_mbb <- rep(NA, B)
+for(i in 1:B) {
+  # sample blocks
+  # get theta_hat^*
+}
+
+# Plot your results to inspect the distribution
+# What is the estimated standard error of theta hat? The Bias?
+```
+
+### Choosing the Block size
+
+```{r}
+# Your turn: Perform the mbb for multiple block sizes l = 1:12
+# Create a plot of the se vs the block size. What do you notice?
+```
+
+
+
 [ ]{.pagebreak}
 
 # Summary
